resolved the safari cross bowser compatibility alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -1240,11 +1240,9 @@ ul.icons li{
 }
 
 .format-card-grid{
-	
 	width: 80%;
 	margin: auto;
 	margin-top: 50px;
-	
 }
 
 .format-card{
@@ -1252,9 +1250,9 @@ ul.icons li{
 	width: 48.5%;
 	border-radius: 5px;
 	margin-right: 1%;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-	display: inline-block;
+	float: left;
 }
 
 .format-card-title{
